[metadata]
name = airflow_providers_geonode
version = attr: geonode_provider.__version__
description = A GeoNode provider for Apache Airflow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/herver1971/geonode-provider
author = Fawzi El Gamal
author_email = fawzielgamal@icloud.com
license = Apache-2.0
license_file = LICENSE
classifiers = 
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
project_urls = 
	Bug Tracker = https://git.kan.com.ar/kan/airflow-providers/geonode-provider/-/issues

[options]
packages = find:
install_requires = 
	apache-airflow>=1.10.0
python_requires = >=3.7

[options.entry_points]
apache_airflow_provider = 
	provider_info=geonode_provider.__init__:get_provider_info

[options.extras_require]
dev = 
	mypy==1.*
	pre-commit==2.15.0
	pydantic

[mypy]
plugins = pydantic.mypy
disallow_untyped_defs = True
show_error_codes = True
files = geonode_provider/

[pydantic-mypy]
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401
ignore = E203, W503
ban-relative-imports = True
inline-quotes = "

[egg_info]
tag_build = 
tag_date = 0
